--- a/pom.xml
+++ b/pom.xml
@@ -15,10 +15,11 @@
             <artifactId>jsoup</artifactId>
             <version>1.7.2</version>
         </dependency>
+
         <dependency>
-            <groupId>commons-httpclient</groupId>
-            <artifactId>commons-httpclient</artifactId>
-            <version>3.1</version>
+            <groupId>org.apache.httpcomponents</groupId>
+            <artifactId>httpclient</artifactId>
+            <version>4.3</version>
         </dependency>
 
 
